--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,30 @@
 /build
 /captures
 .idea
+sample.iml
+
+#Android generated
+bin
+gen
+
+build
+*.bat
+.gradle
+.idea
+*.iml
+*.ipr
+*.iws
+out
+
+#Maven
+target
+release.properties
+pom.xml.*
+
+#Ant
+build.xml
+local.properties
+proguard.cfg
+
+#OSX
+.DS_Store
